# quadrilateral_interpolation

./: README.md  pyproject.toml
.github/workflows/: publish.yml  pytest.yml
examples/: greenland.yaml  reproject-olci-image.ipynb
examples/data/: README.md
quadrilateral_interpolation/: quadinterpolator.py
src/quadrilateral_interpolation/: __init__.py  quadinterpolator.py  test_quadinterpolator.py
