[tool.poetry]
name = "quadrilateral_interpolation"
version = "0.1.0"
description = "Fast projection of satellite images using forward quadrilateral interpolation"
authors = ["Ghislain Picard <ghislain.picard@univ-grenoble-alpes.fr>"]
license = "LGPL"

[tool.poetry.dependencies]
python = ">=3.9"
xarray = ">=2022.3.0"
numba = ">=0.55.1"
numpy = ">=1.22.3"
pyproj = ">=3.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
