[project]
name = "quadrilateral_interpolation"
dynamic = ["version"]
description = "Fast projection of satellite images using forward quadrilateral interpolation"
authors = [
        {name = "Ghislain Picard", email = "ghislain.picard@univ-grenoble-alpes.fr"},
        ]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10, <3.14"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]


dependencies = [
    "numpy>=2,<2.5",
    "numba>=0.62.1,<1",
    "pyproj>=3.3.1",
    "xarray>=2022.3.0"
]

[dependency-groups]
dev = ["pytest", "ruff", "pre-commit"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "pre-commit"]

[build-system]
requires = ["setuptools >= 62",
            "setuptools_scm[toml] >= 6.2",
]
build-backend = "setuptools.build_meta"


[tool.ruff]
line-length = 120
target-version = "py310"
lint.ignore = ["E741"]
lint.pydocstyle.convention = "google"
extend-exclude = ["attic"]

[tool.setuptools_scm]


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
quadrilateral_interpolation = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
